--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/absmartly/absmartly-managed-component#readme",
   "dependencies": {
     "@absmartly/javascript-sdk": "^1.13.2",
+    "isomorphic-dompurify": "^2.30.1",
     "linkedom": "^0.18.12"
   },
   "devDependencies": {
