--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
   "homepage": "https://github.com/absmartly/absmartly-managed-component#readme",
   "dependencies": {
     "@absmartly/javascript-sdk": "^1.13.2",
-    "@absmartly/sdk-plugins": "^1.1.2",
-    "isomorphic-dompurify": "^2.35.0",
+    "@absmartly/managed-component": "file:absmartly-managed-component-0.1.0.tgz",
+    "@absmartly/sdk-plugins": "file:../absmartly-sdk-plugins/absmartly-sdk-plugins-1.1.2.tgz",
+    "dompurify": "^3.2.4",
     "linkedom": "^0.18.12",
-    "wrangler": "^4.54.0"
+    "wrangler": "^4.54.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@managed-components/types": "^1.3.1",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@vitest/ui": "^0.34.0",
